--- a/style.css
+++ b/style.css
@@ -289,5 +289,5 @@ header .content .btns a{
     padding: 8px 12px;
     font-size: 15px;
     font-weight: 600;
-    background;
+    background:linear-gradient(90deg #00bdff);
 }
